# ftdc-analyzer

./: .gitignore  ARCHITECTURE.md  BUILD_STATUS.md  CAPACITY_PLANNING_DEEP_ANALYSIS.md  ENHANCED_CAPACITY_PLANNING_IMPLEMENTATION.md  INSTALL.md  LAYER2_BUILD_NOTES.md  LLM_REMOVAL_COMPLETE.md  LLM_REMOVAL_PLAN.md  LLM_REMOVAL_STATUS.md  Makefile  README.md  STATUS.md  _audit_a1_probe.py  context_plan.md  ftdc_engine_entry.py  pyproject.toml  recon.py  recon_out.txt  test_enhanced_analysis.py
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
app/: package-lock.json  package.json
app/src/: App.tsx  index.css  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  llm.rs  ruleset.rs
app/src/components/: AssessmentControls.tsx  AssessmentPanel.tsx  AssessmentV2Panel.tsx  CollectorHelp.tsx  ExploreView.tsx  HealthcheckReport.tsx  HistoryView.tsx  InsightsStrip.tsx  Landing.tsx  LlmSettings.tsx  MethodologyRules.tsx  MigrationOverview.tsx  MiniGame.tsx  (+6 more)
collectors/: getMongoData.js
ftdc_analyzer/: cli.py  confidence_calculator.py  decoder.py  dependency_graph.py  healthcheck.py.bak  issue_classifier.py  metrics.py  metrics.py.bak  report.py  scorer.py  signatures.py  sizing.py  verdicts.py  verdicts.py.bak
ftdc_analyzer/inputs/: __init__.py  healthcheck_input.py  registry.py  rs_status.py  sh_status.py
ftdc_analyzer/ruleset/: __init__.py  defaults.py  overrides.py  schema.py
ftdc_analyzer/tier_tables/: aws.json  azure.json  gcp.json
scripts/: uat_regression_guard.py
(+8 files in other folders)
