[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ftdc-analyzer"
version = "0.1.0"
description = "Local MongoDB FTDC (diagnostic.data) analysis engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pymongo>=4",
    "numpy>=1.24",
    "plotly>=5",
]

[project.optional-dependencies]
build = ["pyinstaller>=6"]

[project.scripts]
ftdc-engine = "ftdc_analyzer.cli:main"

[tool.setuptools]
packages = ["ftdc_analyzer"]
